Rewrite almost entirely, add history
Added history, including visits.

Rewrote most of the script to use ES6. Uses Promises, though probably
poorly. (I find futures (Deferred(sp?) in JavaScript-land) nicer to work
with.)

Still just a static snapshot of tabs and history.

Clicking the 'browser action' button now gets a full db of: tab,
hist(ory items), and visit entities.  Accessible via:
`DataScriptMyTabs.latest`.

Still no UI, so only usable via `about:extensions`, then inspect the
`background.html` page.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
   "version": "0.0.1",
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "history"
   ],
   "browser_action": {
     "default_title": "DataScript my tabs"
