Add default keyboard shortcut: <Ctrl-Shift-o>

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,12 @@
   ],
   "browser_action": {
     "default_title": "DataScript my tabs"
+  },
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+O"
+      }
+    }
   }
 }
